@@ -1,2 +1,4 @@
+* Change Party Name endorsement handles several parties.
+
 Version 1.4 - 2015-05-29
 * Module creation
