@@ -1,2 +1,4 @@
+* Process can be initialized with several parties
+
 Version 1.4 - 2015-05-29
 * Module creation
