@@ -1,3 +1,5 @@
+* Endorsement Step defines if the Endorsement Part can handle several instances.
+
 Version 1.4 - 2015-05-29
 * Use rich text format for endorsement summary
 * Add void endorsement
